[gd_scene load_steps=8 format=3 uid="uid://csyobx6dnfxej"]

[ext_resource type="Script" path="res://scenes/guess/guess.gd" id="1_8o3g8"]
[ext_resource type="PackedScene" uid="uid://d30ah5swxo0o6" path="res://scenes/components/header/header.tscn" id="2_721et"]
[ext_resource type="Theme" uid="uid://cx3ifongrjpye" path="res://resources/theme/game_theme.tres" id="3_algii"]
[ext_resource type="Texture2D" uid="uid://dr42a5op5uok2" path="res://assets/design/toggle_yes.png" id="4_03wbr"]
[ext_resource type="Texture2D" uid="uid://b4jwcodxhpwx0" path="res://assets/design/toggle_no.png" id="5_4qt7h"]
[ext_resource type="Texture2D" uid="uid://bp1xso461e8b0" path="res://assets/design/open_web_button.png" id="6_a543s"]
[ext_resource type="Texture2D" uid="uid://bybcrkk6lvw23" path="res://assets/design/play_button.png" id="6_uwin2"]

[node name="Guess" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_8o3g8")

[node name="Header" parent="." instance=ExtResource("2_721et")]
layout_mode = 2
header_text = "Guess"

[node name="Text" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.596078, 0.788235, 0.501961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Answer"

[node name="AnswerLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.968627, 0.764706, 0.164706, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
autowrap_mode = 3

[node name="CorrectArtistMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="CorrectArtistToggle" type="CheckButton" parent="CorrectArtistMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_algii")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_icons/checked = ExtResource("4_03wbr")
theme_override_icons/unchecked = ExtResource("5_4qt7h")
text = "Correct Artist"
expand_icon = true

[node name="CorrectSongMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="CorrectSongToggle" type="CheckButton" parent="CorrectSongMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_algii")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_icons/checked = ExtResource("4_03wbr")
theme_override_icons/unchecked = ExtResource("5_4qt7h")
text = "Correct Song"
expand_icon = true

[node name="Footer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Footer"]
layout_mode = 2

[node name="OpenWebButton" type="TextureButton" parent="Footer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("6_a543s")
stretch_mode = 0

[node name="NextTurnButton" type="TextureButton" parent="Footer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("6_uwin2")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Footer/HBoxContainer/OpenWebButton" to="." method="_on_open_web_button_pressed"]
[connection signal="pressed" from="Footer/HBoxContainer/NextTurnButton" to="." method="_on_next_turn_button_pressed"]
